# greptile-takehome

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: requirements.txt
backend/app/: database.py  main.py  models.py  routes.py  schemas.py
cli/: pyproject.toml
cli/changelog_cli/: __init__.py  ai_generator.py  api_client.py  git_parser.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
